# CSV_Median_Calculator

./: CMakeLists.txt  README.md  specs.md
resources/configs/: config.toml
resources/data/input/: data_april.csv  stock.csv  trade_fake.csv
sources/: main.cpp
sources/core/: Application.cpp  Application.h  CsvOutputWriter.cpp  CsvOutputWriter.h  CsvRecordReader.cpp  CsvRecordReader.h  FileScanner.cpp  FileScanner.h  MedianCalculator.cpp  MedianCalculator.h  TomlConfigLoader.cpp  TomlConfigLoader.h
sources/interfaces/: IConfigLoader.hpp  IFileScanner.hpp  IMedianCalculator.hpp  IOutputWriter.hpp  IRecordReader.hpp
sources/multi_thread_module/: NewThreadPool.cpp  NewThreadPool.h
sources/structures/: CommonStructures.hpp
